src/objects/License_EUM_Details__c.object
<CustomObject>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>EUM Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>EUM Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Units__c</fullName>
        <label>EUM Agents</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Overages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EUM Allow Overages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUMCount__c</fullName>
        <label>EUMCount</label>
        <summarizedField>EUM_Web__c.Units__c</summarizedField>
        <summaryForeignKey>EUM_Web__c.License_EUM_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FailoverBackup__c</fullName>
        <label>FailoverBackup</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Import_EUM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import EUM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>License to which this EUM details are associated with.</inlineHelpText>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>License EUM Details</relationshipLabel>
        <relationshipName>License_EUM_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobileCount__c</fullName>
        <label>MobileCount</label>
        <summarizedField>EUM_Mobile__c.Units__c</summarizedField>
        <summaryForeignKey>EUM_Mobile__c.License_EUM_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RUM_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RUM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>EUM Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>EUM State</label>
        <picklist>
            <picklistValues>
                <fullName>ENABLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISABLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELETED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>EUM License Type</inlineHelpText>
        <label>EUM Type</label>
        <picklist>
            <picklistValues>
                <fullName>LITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>License EUM Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License EUM Detail(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License EUM Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>